# ui-protocol

./: .gitignore  README.md  index.html  pyproject.toml  server.py  style.css
ag-ui-test/: package-lock.json  package.json
ag-ui-test/src/: App.css  App.jsx
ui-protocol/protocol-ag-ui/agent/: agent.py  custom.py  requirements.txt
ui-protocol/protocol-ag-ui/agent/util/: langfuse.py  openai_client.py
ui-protocol/protocol-ag-ui/agent/util/config/: config.yaml
ui-protocol/protocol-ag-ui/scripts/: setup-agent.sh
ui-protocol/protocol-ag-ui/src/app/: page.tsx
util/: openai_client.py
util/config/: config.py  config.yaml
